--- a/projeto_cordel/estilo/style.css
+++ b/projeto_cordel/estilo/style.css
@@ -1,5 +1,14 @@
  @charset "UTF-8";
 
+ @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+ :root {
+    --fonte1: verdana, geneva, tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+ }
+
  * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +17,7 @@
  html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
  }
 
  header {
@@ -18,6 +28,8 @@
  header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
  }
  header > p {
     padding-bottom: 50px;
@@ -33,19 +45,32 @@
     text-decoration: underline;
  }
 
+ section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
+ }
+
  section.normal {
     background-color: white;
-    color: black;
+    color: rgb(46, 44, 44);
 
  }
 
  section.imagem {
-    background-color: darkgray;
+    background-color: rgb(29, 28, 28);
     color: white;
  }
- section.imagem {
 
+ section.imagem > p {
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.315);
  }
+ 
 
  footer {
     background-color: black;
