--- a/projeto_cordel/estilo/style.css
+++ b/projeto_cordel/estilo/style.css
@@ -35,15 +35,23 @@
     padding-bottom: 50px;
  }
  
+ header a, footer a {
+   color: white;
+   text-decoration: none;
+   font-weight: bolder;
+ }
+
+ head a:hover, footer a:hover {
+   text-decoration: underline;
+ }
  a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
  }
 
- a:hover {
-    text-decoration: underline;
- }
+ 
+ 
 
  section {
     padding-top: 10vh;
@@ -52,6 +60,10 @@
     padding-left: 30px;
     font-family: var(--font3);
     font-size: 3.5vw;
+ }
+
+ section > p {
+   padding-bottom: 2em;
  }
 
  section.normal {
@@ -63,14 +75,29 @@
  section.imagem {
     background-color: rgb(29, 28, 28);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.541);
+    background-attachment: fixed;
  }
 
  section.imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.315);
+    text-shadow: 1px 1px 0px black;
+ }
+
+ section#img01 {
+   background-image: url(../imagens/background001.jpg);
+   background-position: right center;
+   background-size: cover;
+
  }
  
+ section#img02 {
+   background-image: url(../imagens/background002.jpg);
+   background-size: cover;
+
+ }
 
  footer {
     background-color: black;
